BACKLOG-4194 - Regressions raised by code review https://jira.jahia.org/browse/BACKLOG-4194
Use Integer.valueOf() instead of new Integer():
https://devtools.jahia.com/fisheye/cru/AND-168#c6376

git-svn-id: svn://localhost/jahia/trunk@22150 69c369ed-ed09-0410-a4a1-e19a46c23626